<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:android="http://schemas.android.com/apk/res/android">

    <string name="app_name">ThesGuideProject</string>
    <string name="hello_world">Hello world!</string>
    <string name="english">English</string>
    <string name="action_settings">Settings</string>
    <string name="phoneNum">Phone number:</string>
    <string name="mapButton1">Press to see the map</string>
	<string name="actBarButton1">Press to see the ActionBarTest activity</string>
	<string name="action_search">Search</string>
	<string name="action_path">Path</string>
	<string name="curLocButton1">Press to see your current location</string>
	<string name="kamara">Kamara</string>
	<string name="alexandros">Alex statue</string>
	<string name="text">text</string>
	<string name="image_desc">Location image</string>
	<string name="grid_image">Grid image</string>
	<string name="details">Details</string>
    <string name="search_hint">Search hint</string>
    <string name="mainButton">Main Layout</string>
    <string name="fragmentTestButton">Fragment Test</string>
    <string name="clearDataDBbutton">Clear Data</string>
    <string name="eventsbutton">Events</string>
	<string name="museumsbutton">Museums</string>
	<string name="foodbutton">Food</string>
	<string name="nightlifebutton">Nightlife</string>
	<string name="hospitalsbutton">Hospitals</string>
	<string name="sightseeingsbutton">SightSeeings</string>
	<string name="churchesbutton">Churches</string>
    <string name="imageInternalStorage">Internal Storage</string>
    <string name="cursorAdapterButton">Cursor Adapter</string>
	<string name="spinnertest">Spinner 1</string>
    <string name="relButton">Relative Layout Button</string>
	<string name="spinnercategory_title">Select Category</string>
	<string name="spinnersubcategory_title">Select Sub Category</string>
	<string name="onMapButton">Check Map</string>
	<string name="infoButton">Info</string>
	<string name="descr_image">Image</string>
	<string name="menu_item_clear_memory_cache">Clear memory cache</string>
    <string name="menu_item_clear_disc_cache">Clear disc cache</string>
    <string name="menu_item_pause_on_scroll">Pause on scroll</string>
    <string name="menu_item_pause_on_fling">Pause on fling</string>
	<string name="texresource">TextView TEXT</string>
	<string name="TextButton">KAALSEEEE</string>
	<string name="byzantine">Byzantine</string>
	<string name="paleochr">Old Christian</string>
	<string name="basiliki">Basilica</string>
	<string name="macedonian">Macedonian</string>
	<string name="rdselectcategory">Select Category</string>
	<string name="rdcurrentlocation">Current Position</string>
	<string name="disarableedhint">Pick your Location</string>
	<string name="spoint">Starting Point</string>
	<string name="dpoint">Destination Point</string>
	<string name="rdselectdescategory">Select Dest Cat</string>
    <string name="mon">Mon</string>
    <string name="tue">Tue</string>
    <string name="wed">Wed</string>
    <string name="thu">Thu</string>
    <string name="fri">Fri</string>
    <string name="sat">Sat</string>
    <string name="sun">Sun</string>
	<string name="barrestitem">Bar-Restaurant</string>
	<string name="restitem">Restaurant</string>
	<string name="intcuisitem">International Cuisine</string>
	<string name="seafooditem">Seafood</string>
	<string name="barsitem">Bars</string>
	<string name="clubsitem">Clubs</string>
	<string name="pubsitem">Pubs</string>
	<string name="eventsitem">Events</string>
	<string name="retrybuttoninenglish">Please Retry</string>
	<string name="nonetconnectioninenglishtv">No Internet Connection</string>
	
	<string name="greek">Ελληνικά</string>
	
	
	
	<string-array name="category_array">
	    <item>Bar</item>
	    <item>Club</item>
	    <item>Category 3</item>
	    <item>Category 4</item>
	</string-array>
	
	<string-array name="subcategory_array">
		<item>Sub Category 1</item>
	    <item>Sub Category 2</item>
		<item>Sub Category 3</item>
		<item>Sub Category 4</item>
	</string-array>
		
	<string-array  name="night_life_subcategories">
		<item>Clubs</item>
		<item>Bars</item>
		<item>Mpouzoukia</item>
		<item>Pubs</item>
    </string-array>
    
</resources>
