<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    
	<group
       android:checkableBehavior="single">
       
   <item 
        android:id="@+id/axiotheatad"
        android:title="@string/sightseeingsbutton" >
   </item>
    
   <item 
        android:id="@+id/barrestd"
        android:title="@string/barrestitem" >
   </item>
    
   <item 
        android:id="@+id/restd"
        android:title="@string/restitem" >
   </item>
    
   <item 
        android:id="@+id/intcuisd"
        android:title="@string/intcuisitem" >
   </item>
    
   <item 
        android:id="@+id/seafoodd"
        android:title="@string/seafooditem" >
   </item>
    
   <item 
        android:id="@+id/barsd"
        android:title="@string/barsitem" >
   </item>
    
   <item 
        android:id="@+id/clubsd"
        android:title="@string/clubsitem" >
   </item>
    
   <item 
        android:id="@+id/pubsd"
        android:title="@string/pubsitem" >
    </item>
   
   <item 
        android:id="@+id/mouseiad"
        android:title="@string/museumsbutton" >
   </item>
    
   <item 
        android:id="@+id/ekklisiesd"
        android:title="@string/churchesbutton" >
   </item>
     
   <item 
        android:id="@+id/nosokomeiad"
        android:title="@string/hospitalsbutton">
   </item>
    
    </group>
    
    
</menu>
