<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.thesguideproject.MainActivity"
    tools:ignore="MergeRootFrame" >
    
    <LinearLayout 
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">
    <!-- Main ListView
         Always give id value as list(@android:id/list)
    -->
    <ListView
        android:id="@android:id/list"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
    </ListView>
    
    <Button
        android:id="@+id/mapButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mapButton1">    
    </Button>
    
    
    <Button
        android:id="@+id/actBarButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/actBarButton1">    
    </Button>
    
    <Button
        android:id="@+id/curLocationButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/curLocButton1">    
    </Button>
    
    <Button 
        android:id="@+id/mainLayoutButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mainButton">
    </Button>
    
    <Button
        android:id="@+id/fragmentTestButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fragmentTestButton">
    </Button>
    
    </LinearLayout>
    
 </FrameLayout>   

