<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background"
    android:orientation="vertical" >

      <RelativeLayout
        android:id="@+id/header"
        android:layout_width="fill_parent"
        android:layout_height="30dp" >

        <RelativeLayout
            android:id="@+id/previous"
            android:layout_width="40dp"
            android:layout_height="30dp"
            android:layout_alignParentLeft="true" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:background="@drawable/arrow_left" />
        </RelativeLayout>

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:textColor="#000000"
            android:textSize="18dp"
            android:textStyle="bold" />

        <RelativeLayout
            android:id="@+id/next"
            android:layout_width="40dp"
            android:layout_height="30dp"
            android:layout_alignParentRight="true" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:background="@drawable/arrow_right" />
        </RelativeLayout>
   </RelativeLayout>
   
     <TableLayout 
         android:id="@+id/tablelayout"
         android:shrinkColumns="*" 
         android:stretchColumns="*"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content">
        
         <TableRow
            android:id="@+id/tableRow1"
            android:layout_height="wrap_content"
            android:layout_width="match_parent">
         
         <TextView 
             android:id="@+id/tvsunday"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:gravity="center_horizontal"
             android:text="@string/sun"/>
         
         <TextView 
             android:id="@+id/tvmonday"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:gravity="center_horizontal"
             android:text="@string/mon"/>
         
         <TextView 
             android:id="@+id/tvtuesday"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:gravity="center_horizontal"
             android:text="@string/tue"/>
         
         <TextView 
             android:id="@+id/tvwednesday"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:gravity="center_horizontal"
             android:text="@string/wed"/>
         
         <TextView 
             android:id="@+id/tvthursday"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:gravity="center"
             android:text="@string/thu"/>
         
         <TextView 
             android:id="@+id/tvfriday"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:gravity="center_horizontal"
             android:text="@string/fri"/>
         
         <TextView 
             android:id="@+id/tvsaturday"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:gravity="center_horizontal"
             android:text="@string/sat"/>
         
         </TableRow>
     </TableLayout> 
   
       <GridView
        android:id="@+id/gridview"
        android:layout_width="fill_parent"
        android:layout_height="150dp"
        android:layout_gravity="center_horizontal"
        android:listSelector="@android:color/transparent"
        android:numColumns="7"
        android:stretchMode="columnWidth" />
  
       <TextView
           android:id="@+id/eventslabeltv"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:paddingBottom="5dp"
           android:paddingTop="5dp"
           android:layout_gravity="center" >
       </TextView> 
       
     <FrameLayout 
	    android:id="@+id/containerdetails"
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:background="#ccc">
	</FrameLayout>
	
    

</LinearLayout>