<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    
    <RadioGroup 
        android:id="@+id/radiogroupstartingpoint" 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        
        <RadioButton 
            android:id="@+id/currentpositionrd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rdcurrentlocation"
            />
        
        <RadioButton 
            android:id="@+id/selectcategoryrd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rdselectcategory"
            />
        
    </RadioGroup>
    
   
    <EditText 
        android:id="@+id/pickyourdisarablelocationet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/disarableedhint">
    </EditText>
    
    <TextView 
        android:id="@+id/startingpointtv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible">
    </TextView>
    
    <ListView 
        android:id="@+id/list"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:clickable="true"
        android:scrollbarStyle="outsideInset">
    </ListView>
    
    
    

</LinearLayout>
