<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.thesguideproject.PlacesListFragmentActivityTest$PlaceholderFragment"
     >
    
    
    <ScrollView 
     android:id="@+id/scrollview1"
     android:layout_width="match_parent"
     android:layout_height="45dp"
     android:scrollbars="horizontal" >
   
    <HorizontalScrollView 
        android:id="@+id/horizontalscrollview1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
        android:scrollbars="none"
        android:scrollbarStyle="insideOverlay" >
              
    	<LinearLayout
        	android:id="@+id/linearlayout1"
        	android:orientation="horizontal"
        	android:layout_height="45dp"
        	android:clickable="true"
        	android:layout_width="wrap_content"
        	 >
        
        
       	<!--     <Button
            		android:id="@+id/clearDataDBbutton"
            		android:layout_width="wrap_content"
            		android:layout_height="match_parent"
            		android:background="#afc"
                    android:text="@string/clearDataDBbutton">    
               </Button>
       			
       		   <View 
       		       android:background="#000"
       		       android:layout_width="1dp"
       		       android:layout_height="match_parent">   
       		   </View>   -->	
        	   
       		   <Button
       		       android:id="@+id/eventsbutton"
       		       android:layout_width="wrap_content"
       		       android:layout_height="match_parent"
       		       android:textColor="#fff"
            	   android:text="@string/eventsbutton">
       		   </Button>
       		   
       		   <View 
       		       android:background="#fff"
       		       android:layout_width="1dp"
       		       android:layout_gravity="center_vertical"
       		       android:layout_height="30dp">   
       		   </View>
       		   
       		   <Button
            		android:id="@+id/sightseeingsbutton"
            		android:layout_width="wrap_content"
            		android:layout_height="match_parent"
            		android:textColor="#fff"
            		android:text="@string/sightseeingsbutton">       
        	   </Button>
       		   
       		    <View 
       		       android:background="#fff"
       		       android:layout_width="1dp"
       		       android:layout_gravity="center_vertical"
       		       android:layout_height="30dp">   
       		   </View>
       		   
       		   <Button
       		       android:id="@+id/foodButton"
       		       android:layout_width="wrap_content"
       		       android:layout_height="match_parent"
       		       android:textColor="#fff"
       		       android:text="@string/foodbutton">
       		   </Button>
       		   
       		   <View 
       		       android:background="#fff"
       		       android:layout_width="1dp"
       		       android:layout_gravity="center_vertical"
       		       android:layout_height="30dp">   
       		   </View>
       		   
    			<Button
        			android:id="@+id/nightlifebutton"
        			android:layout_width="wrap_content"
        			android:layout_height="match_parent"
        			android:textColor="#fff"
        			android:text="@string/nightlifebutton">
    			</Button>
       		   
       		    <View 
       		       android:background="#fff"
       		       android:layout_width="1dp"
       		       android:layout_gravity="center_vertical"
       		       android:layout_height="30dp">   
       		   </View>
       		   
        	   <Button
            		android:id="@+id/museumsbutton"
            		android:layout_width="wrap_content"
              		android:layout_height="match_parent"
            		android:textColor="#fff"
            		android:text="@string/museumsbutton">       
        	   </Button>
        		
        	   <View 
       		       android:background="#fff"
       		       android:layout_width="1dp"
       		       android:layout_gravity="center_vertical"
       		       android:layout_height="30dp">   
       		   </View>
       		   
        	 <!--    <Spinner 
            		android:id="@+id/ssnightlifespinner"
            		android:layout_width="wrap_content"
            		android:layout_height="match_parent"
            		android:prompt="@string/spinnercategory_title"
            		android:background="#cc2">
        	   </Spinner>
        	
        	   <View 
       		       android:background="#000"
       		       android:layout_width="1dp"
       		       android:layout_height="match_parent">   
       		   </View>  -->
       		   
       		    <Button
            		android:id="@+id/churchesbutton"
            		android:layout_width="wrap_content"
            		android:layout_height="match_parent"
            		android:textColor="#fff"
            		android:text="@string/churchesbutton">       
        	   </Button>
        	
        	    <View 
       		       android:background="#fff"
       		       android:layout_width="1dp"
       		       android:layout_gravity="center_vertical"
       		       android:layout_height="30dp">   
       		   </View>
       		   
        	      <Button 
        	       android:id="@+id/hospitalsbutton"
        	       android:layout_width="wrap_content"
        	       android:layout_height="match_parent"
        	       android:textColor="#fff"
        	       android:text="@string/hospitalsbutton">
        	   </Button>
        	  
        	   
        	<!--     <View 
       		       android:background="#000"
       		       android:layout_width="1dp"
       		       android:layout_height="match_parent">   
       		   </View>
       		   
        	   <Button
            		android:id="@+id/internalStorage"
            		android:layout_width="wrap_content"
            		android:layout_height="match_parent"
            		android:background="#fac"
            		android:text="@string/imageInternalStorage">       
        	   </Button>   -->
        
        </LinearLayout>
    
      </HorizontalScrollView>
    	
   </ScrollView>

   
  
        

</RelativeLayout>
